feat: 优化上下文传递